--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>황소 특허법률사무소 | Taurus IP</title>
+    <title>황소 특허법률사무소 | Taurus IP Law Firm</title>
 
     <!-- [검색 엔진 설정] -->
     <meta name="description" content="변리사, 김동한, 박태선, 이동근, 이명우, 황소, 특허법률사무소, 특허법인, 특허, 상표, 디자인, SW, ICT, 전기, 기계, 바이오, 화학, AI, 지식재산권, 출원, 심판, 분쟁, 소송, 경고장">
@@ -1855,6 +1855,7 @@
         window.addEventListener('load', init);
     </script>
 </body>
+
 
 
 </html>
